# grow-guard

./: .gitignore  LICENSE  README.md  cliff.toml  grow-guard.sh
.github/workflows/: release.yml
backend/: cli.py  core.py  daemon.py
desktop/: index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.css  App.tsx  theme.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  logger.rs  main.rs
desktop/src/components/: DialogHost.tsx  StatusCard.tsx
desktop/src/lib/: shared.tsx
desktop/src/tabs/: AppsTab.tsx  HelpTab.tsx  SitesTab.tsx  StatusTab.tsx  UnlockTab.tsx
docs/: ARCHITECTURE.md  BUILD.md  INSTALL.md
scripts/: build.sh  install.sh
scripts/ci/: collect-artifacts.sh  verify-version.sh
